# RgrEgorK

./: CMakeLists.txt  Decryption.cpp  Decryption.h  Encryption.cpp  Encryption.h  HillComp.cpp  HillComp.h  ShamirKeygen.cpp  consolOutputInform.cpp  consolOutputInform.h  helpFunc.cpp  main.cpp  programInMain.cpp  programInMain.h
